# mlh-renderer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  glad.c  main.cpp
.cache/clangd/index/: Exrend2D.cpp.0C3F484D7115F43C.idx  Exrend2D.cpp.8B2263B84EFD7366.idx  Exrend2D.hpp.B5EE399210A53CA2.idx  Exrend2D.hpp.D5FAAA381B7E55E1.idx  FileReader.cpp.B727187B383FA5FC.idx  FileReader.cpp.DE0890A42ABCC78B.idx  FileReader.hpp.1038F43820A926C6.idx  FileReader.hpp.DBDBA2CC10FAB083.idx  InitOpenGL.cpp.030C06A68CBBC87C.idx  InitOpenGL.cpp.5E8AF909DC3B13AA.idx  InitOpenGL.hpp.1BF3FE67F668A844.idx  InitOpenGL.hpp.31FCD10F897751F7.idx  Quad.hpp.012F2E93C07F46BB.idx  QuadGenerator.cpp.204EAA29AB77EAE1.idx  QuadGenerator.hpp.F8003A0ED85B247E.idx  RectangleRenderer.cpp.2A36C207319BC70C.idx  RectangleRenderer.cpp.F4C77C184B30F083.idx  RectangleRenderer.hpp.8CE78A35FBA28D3A.idx  RectangleRenderer.hpp.B7A8FD210ECFEA05.idx  Shader.cpp.752921233E61AA86.idx  Shader.cpp.8E115E9CA710B110.idx  (+15 more)
include/: CheckboxButton.hpp  ClickableArea.hpp  DeserializeJSON.hpp  Exrend2D.hpp  FileReader.hpp  InitOpenGL.hpp  Keys.hpp  Menu.hpp  MouseButtons.hpp  PrintQuads.hpp  Quad.hpp  QuadButton.hpp  QuadGenerator.hpp  QuadUtils.hpp  RectangleBoundary.hpp  RectangleRenderer.hpp  Renderer.hpp  SettingsData.hpp  Shader.h  Shader.hpp  Utils.hpp  Vertex.hpp  Window.hpp
lib/: DeserializeJSON.cpp  Exrend2D.cpp  FileReader.cpp  InitOpenGL.cpp  Keys.cpp  MouseButtons.cpp  PrintQuads.cpp  QuadButton.cpp  QuadGenerator.cpp  RectangleRenderer.cpp  Renderer.cpp  Shader.cpp  Window.cpp  stb_image.cpp
resources/Files/: test_app_1.json
resources/Shaders/: Fragment.shader  Vertex.shader
